# inash

./: CMakeLists.txt  README.md  qml.qrc
qml/: DevicePage.qml  SideBarItem.qml  main.qml
src/: devicemanager.cpp  devicemanager.h  devicemodel.cpp  devicemodel.h  idevice.cpp  idevice.h  ieventmonitor.cpp  ieventmonitor.h  main.cpp
